--- a/Wpf_core_diploma/Pages/pgSubject.xaml
+++ b/Wpf_core_diploma/Pages/pgSubject.xaml
@@ -33,7 +33,7 @@
             <Border.Background>
                 <SolidColorBrush Color="#7C7C7C" Opacity="0.5"/>
             </Border.Background>
-            <ListView x:Name="lvMain"  
+            <ListView x:Name="lvMain" ScrollViewer.HorizontalScrollBarVisibility="Disabled"
                       Background="Transparent" Margin="10" BorderBrush="Transparent">
 
                 <ListView.ItemContainerStyle>
@@ -52,16 +52,16 @@
                 </ListView.ItemsPanel>
 
                 <ListView.ItemTemplate>
-                    <DataTemplate>
-                        <Grid Width="200" Height="200">
+                    <DataTemplate >
+                        <Grid Width="200" Height="250">
                             <StackPanel>
                                 <Grid Height="150" 
                                       Width="150">
                                     <Ellipse Fill="#656565" />
                                     <Image  Width="100" Height="100"
-                                            Source="{Binding ImageIcon}"/>
+                                            Source="{Binding ImageIcon, TargetNullValue={StaticResource photo}}"/>
                                 </Grid>
-                                <TextBlock Text="{Binding NameSubiectum}" HorizontalAlignment="Center" Margin=" 0 20 0 0 " FontSize="14" Foreground="#FFFFFF"/>
+                                <TextBlock Text="{Binding NameSubiectum}" HorizontalAlignment="Center" Margin=" 0 20 0 0 " TextWrapping="Wrap" Height="50" FontSize="14" Foreground="#FFFFFF"/>
                             </StackPanel>
                         </Grid>
                     </DataTemplate>
