--- a/Wpf_core_diploma/App.xaml
+++ b/Wpf_core_diploma/App.xaml
@@ -120,6 +120,27 @@
             
 
         </Style>
+        <!--Button2-->
+        <Style x:Key="Button2" TargetType="{x:Type Button}">
+            <Setter Property="Background" Value="#FF0000"/>
+
+            <Setter Property="Template">
+                <Setter.Value>
+                    <ControlTemplate TargetType="{x:Type Button}">
+                        <Border Background="{TemplateBinding Background}">
+                            <ContentPresenter HorizontalAlignment="Center" VerticalAlignment="Center"/>
+                        </Border>
+                    </ControlTemplate>
+                </Setter.Value>
+            </Setter>
+            <Style.Triggers>
+                <Trigger Property="IsMouseOver" Value="True">
+                    <Setter Property="Background" Value="#8B0000"/>
+                </Trigger>
+            </Style.Triggers>
+
+
+        </Style>
 
         <!--#region DataGrid-->
         <Style x:Key="ColumnHeaderGripperStyle" TargetType="{x:Type Thumb}">
