--- a/Wpf_core_diploma/Pages/pgLvStudent.xaml
+++ b/Wpf_core_diploma/Pages/pgLvStudent.xaml
@@ -305,7 +305,7 @@
                                             BorderBrush="Transparent" Width="5000" ClipToBounds="True" 
                                             FontSize="20" Style="{StaticResource tboxTransperent}" VerticalAlignment="Center"
                                             TextChanged="tcSerchJornal">
-                                    
+
                                 </TextBox>
 
                             </StackPanel>
@@ -349,23 +349,38 @@
                                             <Border.Background>
                                                 <SolidColorBrush Color="#FFFFFF" Opacity="0"/>
                                             </Border.Background>
-                                            <StackPanel Orientation="Horizontal">
-                                                <Button Width="30" Height="30" BorderBrush="Transparent" Click="clChang" Style="{DynamicResource Button1}">
-                                                    <Button.Background>
+                                            <StackPanel Orientation="Horizontal" Margin="5 0 0 0">
+                                                <Grid>
+                                                    <Button Width="30" Height="30" BorderBrush="Transparent" Click="clChang" Style="{DynamicResource Button1}">
+                                                        
+                                                        <Button.Content>
+                                                            <Image Source="/Resources/edit1.png" RenderOptions.BitmapScalingMode="HighQuality"/>
+                                                        </Button.Content>
 
-                                                        <ImageBrush ImageSource="/Resources/pngwing.com.png" />
-                                                    </Button.Background>
+                                                        <Button.Resources>
+                                                            <Style TargetType="Border">
+                                                                <Setter Property="CornerRadius" Value="7"/>
+                                                            </Style>
+                                                        </Button.Resources>
 
 
-                                                </Button>
+                                                    </Button>
+                                                </Grid>
+                                                <Grid Margin="5 0 0 0">
+                                                    <Button Width="30" Height="30" BorderBrush="Transparent" Click="clDel" Style="{StaticResource Button2}">
 
-                                                <Button Width="30" Height="30" BorderBrush="Transparent" Click="clDel" Style="{DynamicResource Button1}">
-                                                    <Button.Background>
-                                                        <ImageBrush ImageSource="/Resources/delete.png" />
-                                                    </Button.Background>
+                                                        <Button.Content>
+                                                            <Image Source="/Resources/del1.png"/>
+                                                        </Button.Content>
+                                                        
+                                                        <Button.Resources>
+                                                            <Style TargetType="Border">
+                                                                <Setter Property="CornerRadius" Value="7"/>
+                                                            </Style>
+                                                        </Button.Resources>
 
-
-                                                </Button>
+                                                    </Button>
+                                                </Grid>
                                             </StackPanel>
                                         </Border>
                                     </Grid>
