--- a/Wpf_core_diploma/Pages/pgLvStudent.xaml
+++ b/Wpf_core_diploma/Pages/pgLvStudent.xaml
@@ -354,7 +354,7 @@
                                                     <Button Width="30" Height="30" BorderBrush="Transparent" Click="clChang" Style="{DynamicResource Button1}">
                                                         
                                                         <Button.Content>
-                                                            <Image Source="/Resources/edit1.png" RenderOptions.BitmapScalingMode="HighQuality"/>
+                                                            <Image Source="/Resources/edit1While.png" RenderOptions.BitmapScalingMode="HighQuality"/>
                                                         </Button.Content>
 
                                                         <Button.Resources>
@@ -362,15 +362,14 @@
                                                                 <Setter Property="CornerRadius" Value="7"/>
                                                             </Style>
                                                         </Button.Resources>
-
-
+                                                        
                                                     </Button>
                                                 </Grid>
                                                 <Grid Margin="5 0 0 0">
                                                     <Button Width="30" Height="30" BorderBrush="Transparent" Click="clDel" Style="{StaticResource Button2}">
 
                                                         <Button.Content>
-                                                            <Image Source="/Resources/del1.png"/>
+                                                            <Image Source="/Resources/del1While.png"/>
                                                         </Button.Content>
                                                         
                                                         <Button.Resources>
